--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -1,34 +1,50 @@
-
 *{
     box-sizing: border-box;
 }
+
 html, body {
     margin: 0;
     padding: 0;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-family: Tahoma, Arial, sans-serif;
     position: relative;
     min-height: 100%;
 }
+
+body {
+    padding: 0 0 40px;
+    color: #333;
+    background: #f9f9f9;
+}
+
 h1, h2, h3, h4 {
     font-family: monospace;
     font-weight: 300;
     color: #444;
 }
-header {
-	background: #000080;
-	border-bottom: 5px solid #ff7761;
-	box-shadow: 0 1px 0 0 rgba(0,0,0,.6);
+
+small {
+    color: #555;
 }
+
+header {
+	padding: 20px;
+    background: #274555;
+    border-bottom: 5px solid #ff7761;
+    box-shadow: 0 1px 0 0 rgba(0,0,0,.6);
+}
+
 nav {
     padding: 15px;
     margin: 0 auto;
     max-width: 800px;
     position: relative;
 }
+
 nav #menu {
-   	/*margin-top: 20px;*/
+    margin-top: 20px;
     float: right;
 }
+
 a {
     text-decoration: none;
     color: #ff7761;
@@ -36,19 +52,82 @@ a {
 
 #menu li {
     float: left;
-    margin: 0 0px;
+    margin: 0 10px;
 }
 
-#menu li a {
+#menu li a, #logout {
     background: transparent;
     cursor: pointer;
     border: 0;
     font-size: 16px;
     display: inline-block;
-    color: #400040;
+    color: #fff;
     text-align: center;
     height: 30px;
     line-height: 30px;
     padding: 0 10px;
     text-decoration: none;
+}
+
+main {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+#content {
+    padding: 15px;
+    background: #fff;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 40px;
+    line-height: 40px;
+    width: 100%;
+    text-align: center;
+    background: #fff;
+    border-top: 1px solid #f9a11b;
+    font-size: 14px;
+}
+
+nav ul, nav li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+/* Needlessly fancy menu hover effect */
+
+#menu li {
+    position: relative;
+}
+
+#menu li a::after, #logout:after {
+    position: absolute;
+    top: 28px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    content: '';
+    opacity: 0;
+    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+    transition: opacity 0.3s, transform 0.3s;
+    -webkit-transform: translateY(10px);
+    transform: translateY(10px);
+}
+
+#graph {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 800px;
+  height: 800px;
+  background-color: #fff;
 }
