--- a/sources/src/main/resources/velocity/layout.vm
+++ b/sources/src/main/resources/velocity/layout.vm
@@ -4,6 +4,17 @@
 	<title>Stock Performance</title>
 	<link rel="stylesheet" href="/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.js"></script>
+	<script src="https://npmcdn.com/react@15.6.2/dist/react-with-addons.min.js"></script>
+	<script src="https://npmcdn.com/react-dom@15.6.2/dist/react-dom.min.js"></script>
+	<script src="https://npmcdn.com/prop-types@15.6.0/prop-types.min.js"></script>
+	<script src="https://npmcdn.com/recharts@1.0.0-beta.9/umd/Recharts.min.js"></script>
+	
+	<script type="text/javascript" src="/graph.js"></script>
 </head>
 <body>
 <header>
@@ -15,7 +26,7 @@
 	</nav>
 </header>
 <main>
-    <div id="content">
+	<div id="content">
         $bodyContent
     </div>
 </main>
