separate javascript into a file, passwordMatch() javascipt function added

--- a/sources/src/main/resources/velocity/layout.vm
+++ b/sources/src/main/resources/velocity/layout.vm
@@ -15,7 +15,7 @@
 	<script src="https://npmcdn.com/recharts@1.0.0-beta.9/umd/Recharts.min.js"></script>
 	
 	<script type="text/javascript" src="/graph.js"></script>
-	
+	<script type="text/javascript" src="/password-check.js"></script>
 </head>
 <body>
 <header>
