--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-    font-family: monospace;
+    font-family: Verdana, Geneva, sans-serif;
     font-weight: 300;
     color: #444;
     font-weight:bold;
@@ -163,12 +163,12 @@ nav ul, nav li {
     cursor: pointer;
 }
 
-.userForm label[id="mark"]{
-	color:green;
+.userForm label[id="validationmark"], label[id="matchmark"] {
     position: relative;
     bottom: 50px;
     left:410px;
 }
+
 
 .notification {
     padding: 10px;
