--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -56,7 +56,7 @@ a {
     margin: 0 10px;
 }
 
-#menu li a, #logout {
+#menu li a, #signout {
     background: transparent;
     cursor: pointer;
     border: 0;
