--- a/sources/src/main/resources/velocity/signin/signin.vm
+++ b/sources/src/main/resources/velocity/signin/signin.vm
@@ -13,5 +13,8 @@
 	<label>Password</label>
 	<input type="password" name="password" placeholder="Enter password" required>
 	<input type="submit">
+	<div class="g-signin2" 
+ 	    data-onsuccess="onSignIn"
+ 	    ></div>
 </form>
 #end
