--- a/sources/src/main/resources/velocity/home/home.vm
+++ b/sources/src/main/resources/velocity/home/home.vm
@@ -1,7 +1,23 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
 <h1>home page</h1>
-<div id="graph">
-	
-</div>
-#end
+<div class="row row-3">
+    #foreach($stock in $stocks)
+        <div class="col">
+            <a class="stock" href="$WebPath.getSTOCKS()$stock.getSymbol()">
+                <div class="stockCover">
+                    <b>$stock.getName()</b>
+                </div>
+                ##-- $msg.get("STOCKS_CAPTION", $stock.getName(), $stock.getSymbol())**
+            </a>
+        </div>        
+    #end
+    
+    <div class="container">
+        <p>Stock Performance</p>
+        <div id="graph">
+            <!-- rechart graph -->
+        </div>
+    </div>
+    
+</div>#end
