--- a/sources/src/main/resources/velocity/layout.vm
+++ b/sources/src/main/resources/velocity/layout.vm
@@ -48,7 +48,13 @@
 </main>
 <footer>
 </footer>
-<script type"text/javascript" src="/js/main.js?ver=6"></script>
+<script type"text/javascript" src="/js/main.js?ver=build_1"></script>
 </body>
 </html>
 #end
+
+
+
+
+
+
