--- a/sources/src/main/resources/velocity/home/home.vm
+++ b/sources/src/main/resources/velocity/home/home.vm
@@ -1,27 +1,7 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
-<form id="home">
-    <div class="symbolcontainer">
-    	<label>Enter stock symbol:</label>
-		<form id="requeststock">
-			<input id="symbolinput" type="text" name="symbol" placeholder="e.g. AAPL,MSFT" required>
-			<button>Go</button>
-			<script>
-				function postSymbol() {
-      				fetch('http://localhost:4567/home/', { 
-      					headers: { 
-      						'Content-Type': 'application/json', 
-      						'Accept': 'application/json' 
-      					} 
-      				});
-		
-				}
-			</script>		
-			</form>
-    </div>
+<form id="homecontainer">
     
-    <div id="graph">
-             <!--rechart graph -->
-    </div>  
+             <!--rechart graph -->  
  </form>
 #end
