--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -144,7 +144,7 @@ nav ul, nav li {
     border-radius: 3px;
     margin: 0 20px 0 5px;
 }
-.inputcontainer #money,#symbolInput{
+.inputcontainer #invest,#symbolInput{
 	width:130px;
 }
 .inputcontainer button {
@@ -179,9 +179,21 @@ nav ul, nav li {
    	border-spacing: 15px 5px;
 }
 
+/* Summary table at last*/
+.summarycontainer {
+	position: relative;
+	display: table; 
+	margin-top: 15px;
+	width:100%;
+	border-collapse: collapse;
+	padding-left:5px;
+}
+.summarycontainer th{
+	color:#274555;
+	font-size:13px;
+}
 
 /*  signin and signup form */
-
 .userForm h1 {
 	text-align:center;
 }
