--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -144,7 +144,7 @@ nav ul, nav li {
     border-radius: 3px;
     margin: 0 20px 0 5px;
 }
-.inputcontainer #invest,#symbolInput{
+.inputcontainer #investment,#symbolInput{
 	width:130px;
 }
 .inputcontainer button {
@@ -186,7 +186,6 @@ nav ul, nav li {
 	margin-top: 15px;
 	width:100%;
 	border-collapse: collapse;
-	padding-left:5px;
 }
 .summarycontainer th{
 	color:#274555;
