--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -1,174 +1,175 @@
-*{
-    box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    font-family: Tahoma, Arial, sans-serif;
-    position: relative;
-    min-height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: Tahoma, Arial, sans-serif;
+	position: relative;
+	min-height: 100%;
 }
 
 body {
-    padding: 0 0 40px;
-    color: #333;
-    background: #f9f9f9;
+	padding: 0 0 40px;
+	color: #333;
+	background: #f9f9f9;
 }
 
 h1, h2, h3, h4 {
-    font-family: Verdana, Geneva, sans-serif;
-    font-weight: 300;
-    color: #444;
-    font-weight:bold;
+	font-family: Verdana, Geneva, sans-serif;
+	font-weight: 300;
+	color: #444;
+	font-weight: bold;
 }
 
 small {
-    color: #555;
+	color: #555;
 }
 
 header {
 	padding: 20px;
-    background: #274555;
-    border-bottom: 5px solid #ff7761;
-    box-shadow: 0 1px 0 0 rgba(0,0,0,.6);
+	background: #274555;
+	border-bottom: 5px solid #ff7761;
+	box-shadow: 0 1px 0 0 rgba(0, 0, 0, .6);
 }
 
 nav {
-    padding: 15px;
-    margin: 0 auto;
-    max-width: 800px;
-    position: relative;
+	padding: 15px;
+	margin: 0 auto;
+	max-width: 800px;
+	position: relative;
 }
 
 nav #menu {
-    margin-top: 20px;
-    float: right;
+	margin-top: 20px;
+	float: right;
 }
 
 a {
-    text-decoration: none;
-    color: #ff7761;
+	text-decoration: none;
+	color: #ff7761;
 }
 
 #menu li {
-    float: left;
-    margin: 0 10px;
+	float: left;
+	margin: 0 10px;
 }
 
 #menu li a, #signout {
-    background: transparent;
-    cursor: pointer;
-    border: 0;
-    font-size: 16px;
-    display: inline-block;
-    color: #fff;
-    text-align: center;
-    height: 30px;
-    line-height: 30px;
-    padding: 0 10px;
-    text-decoration: none;
+	background: transparent;
+	cursor: pointer;
+	border: 0;
+	font-size: 16px;
+	display: inline-block;
+	color: #fff;
+	text-align: center;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 10px;
+	text-decoration: none;
 }
 
 main {
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 5px;
+	max-width: 1100px;
+	margin: 0 auto;
+	padding: 5px;
 }
 
 #content {
-    padding: 15px;
-    background: #fff;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+	padding: 15px;
+	background: #fff;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
 }
 
 footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 40px;
-    line-height: 40px;
-    width: 100%;
-    text-align: center;
-    background: #fff;
-    border-top: 1px solid #f9a11b;
-    font-size: 14px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 40px;
+	line-height: 40px;
+	width: 100%;
+	text-align: center;
+	background: #fff;
+	border-top: 1px solid #f9a11b;
+	font-size: 14px;
 }
 
 nav ul, nav li {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
 }
 
 /* Needlessly fancy menu hover effect */
-
 #menu li {
-    position: relative;
+	position: relative;
 }
 
 #menu li a::after, #logout:after {
-    position: absolute;
-    top: 28px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background: rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    content: '';
-    opacity: 0;
-    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-    transition: opacity 0.3s, transform 0.3s;
-    -webkit-transform: translateY(10px);
-    transform: translateY(10px);
+	position: absolute;
+	top: 28px;
+	left: 0;
+	width: 100%;
+	height: 4px;
+	background: rgba(255, 255, 255, 0.5);
+	border-radius: 5px;
+	content: '';
+	opacity: 0;
+	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+	transition: opacity 0.3s, transform 0.3s;
+	-webkit-transform: translateY(10px);
+	transform: translateY(10px);
 }
 
-.homecontainer h2{
-	text-align:center;
-	margin-top:20px;
-	margin-bottom:0;
+.homecontainer h2 {
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 0;
 }
 
 /* labels inputs button in home page*/
 .inputcontainer {
-    width: 100%;
-	position:relative;
-    margin: 0 0 10px 5px;
+	width: 100%;
+	position: relative;
+	margin: 0 0 10px 5px;
 }
 
 .inputcontainer label {
-    display: inline;
-    /*margin: 0 0 auto 0;*/
+	display: inline;
+	/*margin: 0 0 auto 0;*/
 }
 
 .inputcontainer input {
 	display: inline;
-    border: 1px solid #ddd;
-    padding: 6px 12px;
-    width: 170px;
-    border-radius: 3px;
-    margin: 0 20px 0 5px;
+	border: 1px solid #ddd;
+	padding: 6px 12px;
+	width: 170px;
+	border-radius: 3px;
+	margin: 0 20px 0 5px;
 }
-.inputcontainer #investment,#symbolInput{
-	width:130px;
+
+.inputcontainer #investment, #symbolInput {
+	width: 130px;
 }
+
 .inputcontainer button {
 	display: inline;
-    border: 1px solid #ddd;
-    width: 80px;
-    height: 30px;
-    border-radius: 3px;
-    color: white;
-    background: #274555;
-    cursor: pointer;
-    margin-left:20px;
+	border: 1px solid #ddd;
+	width: 80px;
+	height: 30px;
+	border-radius: 3px;
+	color: white;
+	background: #274555;
+	cursor: pointer;
+	margin-left: 20px;
 }
 
 .graphcontainer {
-	position:relative;
+	position: relative;
 	width: 900px;
 	height: 400px;
-  /*-webkit-box-sizing: border-box;
+	/*-webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 10px;
@@ -180,74 +181,75 @@ nav ul, nav li {
 /* table of symbols on the right side*/
 .listcontainer {
 	position: relative;
-   	border-collapse: separate;
-   	border-spacing: 15px 5px;
+	border-collapse: separate;
+	border-spacing: 15px 5px;
 }
 
 /* Summary table at last*/
 .summarycontainer {
 	position: relative;
-	display: table; 
+	display: table;
 	margin-top: 5px;
-	width:100%;
+	width: 100%;
 	border-collapse: collapse;
 }
-.summarycontainer th{
-	color:#274555;
-	font-size:13px;
+
+.summarycontainer th {
+	color: #274555;
+	font-size: 13px;
 	vertical-align: middle;
 }
 
 /*  signin and signup form */
 .userForm h1 {
-	text-align:center;
+	text-align: center;
 }
 
 .userForm {
-    max-width: 400px;
-    margin: 0 auto;
+	max-width: 400px;
+	margin: 0 auto;
 }
 
 .userForm label {
-    display: block;
-    width: 100%
+	display: block;
+	width: 100%
 }
 
 .userForm input {
-    border: 1px solid #ddd;
-    padding: 8px 12px;
-    width: 100%;
-    border-radius: 3px;
-    margin: 2px 0 20px 0;
+	border: 1px solid #ddd;
+	padding: 8px 12px;
+	width: 100%;
+	border-radius: 3px;
+	margin: 2px 0 20px 0;
 }
+
 .userForm input[type="submit"] {
-    color: white;
-    background: #274555;
-    border: 0;
-    cursor: pointer;
+	color: white;
+	background: #274555;
+	border: 0;
+	cursor: pointer;
 }
 
-.userForm label[id="passwordmark"], label[id="matchmark"], label[id="emailmark"] {
-    position: relative;
-    bottom: 50px;
-    left:410px;
-    width:10px;
-    height:10px;
-  	margin-bottom:0px;
+.mark {
+	position: relative;
+	bottom: 50px;
+	left: 410px;
+	width: 10px;
+	height: 10px;
+	margin-bottom: 0px;
 }
-
 
 .notification {
-    padding: 10px;
-    background: #333;
-    color: white;
-    border-radius: 3px;
+	padding: 10px;
+	background: #333;
+	color: white;
+	border-radius: 3px;
 }
 
 .good.notification {
-    background: #008900;
+	background: #008900;
 }
 
 .bad.notification {
-    background: #bb0000;
+	background: #bb0000;
 }
