--- a/sources/src/main/resources/public/main.css
+++ b/sources/src/main/resources/public/main.css
@@ -51,15 +51,22 @@ a {
 #menu li {
 	float: left;
 	margin: 0 10px;
+	color: #fff;
+	font-size: 16px;
+	line-height: 30px;
+}
+
+#menu li[id="firstname"] {
+	font-size: 18px;
 }
 
 #menu li a, #signout {
-	background: transparent;
 	cursor: pointer;
+	background: transparent;
 	border: 0;
+	color: #fff;
 	font-size: 16px;
 	display: inline-block;
-	color: #fff;
 	text-align: center;
 	height: 30px;
 	line-height: 30px;
