--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,33 +1,49 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+	margin: 0;
+	padding: 0;
+	font-family: Tahoma, Arial, sans-serif;
+	position: relative;
+	min-height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+	padding: 0 0 40px;
+	color: #333;
+	background: #f9f9f9;
 }
 
-.App-link {
-  color: #61dafb;
+h1, h2, h3, h4 {
+	font-family: Verdana, Geneva, sans-serif;
+	color: #444;
+	font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+small {
+	color: #555;
+}
+
+header {
+	background: #274555;
+	border-bottom: 5px solid #ff7761;
+	box-shadow: 0 1px 0 0 rgba(0, 0, 0, .6);
+}
+
+nav {
+	padding: 25px;
+	margin: 0 auto;
+	max-width: 900px;
+	position: relative;
+}
+
+nav #menu {
+	float: right;
+}
+
+a {
+	text-decoration: none;
+	color: #ff7761;
 }
