using formcontrol so buttons not overlapping when resize

--- a/frontend/src/components/css/Header.css
+++ b/frontend/src/components/css/Header.css
@@ -5,7 +5,12 @@ header {
   background-color: #4b2e83;
 }
 
-#signin {
+#menu {
+  display: inline-block;
   position: absolute;
   right: 5%;
+}
+
+#menu .button {
+  margin-right: 1vw;
 }
