--- a/client/src/components/css/Footer.css
+++ b/client/src/components/css/Footer.css
@@ -1,16 +1,16 @@
 
 #footer {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	bottom: 0;
-	height: 40px;
-	line-height: 40px;
+	/* height: 50px; */
 	width: 100%;
 	text-align: center;
+	vertical-align: center;
 	background: #fff;
 	border-top: 1px solid #f9a11b;
-  font-size: 14px;
+	font-size: 12px;
+	font: sans-serif;
   display: 'block';
   padding: '20px';
-  height: '60px';
 }
