--- a/client/src/components/css/TopBar.css
+++ b/client/src/components/css/TopBar.css
@@ -7,10 +7,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: baseline;
+  align-items: center;
 }
 
 .update-button {
   cursor: pointer;
 	height: 50%;
+}
+
+.dropbox {
+  width: 25%;
 }
